<resources>
    <string name="app_name">My Application</string>

    <string name="HomeTitleName">熊猫直播</string>
    <string name="HomeTabhome">首页</string>
    <string name="HomeTabpandalive">熊猫直播</string>
    <string name="HomeTabRollingVideo">滚滚视频</string>
    <string name="HomeTabPandaReport">熊猫播报</string>
    <string name="HomeTabliveChian">直播中国</string>
    <string name="rall_time">04:55</string>
    <string name="rall_title">《熊猫TOP榜》</string>
    <string name="rall_content">第三季第十九期：煤炭兄妹的日常之你抢我抢</string>
    <string name="start_time">首播时间:</string>
    <string name="lanmu_js">栏目介绍:</string>
    <string name="gaoq_sp">高清视频:</string>
    <string name="Homeitemlives">直播秀场</string>
    <string name="HomeitemAmazing">精彩一刻</string>
    <string name="HomeitemliveChain">直播中国</string>
    <string name="HomeOriginal">原创·互动</string>


</resources>
