<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@color/gainsboro">

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="9%"
        android:background="@color/colorPrimaryDark"
        >
        <ImageView
            android:id="@+id/return_one"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/personal_back_img"
            />
        <TextView
            android:id="@+id/toobar_tit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            />
    </com.zhy.android.percent.support.PercentRelativeLayout>
    <fm.jiecao.jcvideoplayer_lib.JCVideoPlayer
        android:id="@+id/videocontroller1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="32%"/>

    <com.zhy.android.percent.support.PercentLinearLayout
        android:background="@drawable/rall_shap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="10%"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lanmu_js"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/lightgray"
                />
            <CheckBox
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@mipmap/live_china_detail_down"
                android:layout_centerHorizontal="true"
                android:button="@null"
                android:id="@+id/radioButton" />

        </RelativeLayout>

    </com.zhy.android.percent.support.PercentLinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/intro_lay"
        android:visibility="gone"
        android:background="@drawable/rall_shap"
        >
        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="96%"
        app:layout_heightPercent="7%"
        android:background="@drawable/rall_shap"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gaoq_sp"
            android:padding="10dp"
            android:textColor="@color/black" />
    </com.zhy.android.percent.support.PercentLinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"></View>

    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/rrr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="30%"
        app:layout_widthPercent="98%"
        >
        <com.jcodecraeer.xrecyclerview.XRecyclerView
            android:id="@+id/xrecycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rall_shap"
            android:layout_marginLeft="8dp"
            ></com.jcodecraeer.xrecyclerview.XRecyclerView>

    </com.zhy.android.percent.support.PercentLinearLayout>

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="98%">
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rall_shap"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            >
            <CheckBox
                android:id="@+id/collect"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:background="@drawable/collect_no"
                android:layout_weight="1"
                android:button="@null"
                android:layout_marginLeft="100dp"/>
            <ImageView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/share"
                android:layout_weight="1"
                android:layout_marginRight="100dp"
                 />
        </LinearLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>
</com.zhy.android.percent.support.PercentLinearLayout>